# transcripcion_local_completa

./: .gitignore  README.md  modelos.txt  pyproject.toml
app/: __init__.py  main.py
scripts/: sample_request.http
transcripcion_local.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
